[package]
name = "rhiaqey-gateways"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[workspace]
members = [
    "crates/rhiaqey-gateway-http",
    "crates/rhiaqey-gateway-gtfs",
    "crates/rhiaqey-gateway-websocket"
]

[workspace.package]
version = "0.1.84"
edition = "2021"

[workspace.dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git" }
tokio = { version = "1.38", features = ["full", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.11" }
log = { version = "0.4" }

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
rhiaqey-gateway-http = { path = "crates/rhiaqey-gateway-http", optional = true }
rhiaqey-gateway-gtfs = { path = "crates/rhiaqey-gateway-gtfs", optional = true }
rhiaqey-gateway-ws = { path = "crates/rhiaqey-gateway-websocket", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }
futures = "0.3"
lazy_static = { version = "1.4" }
rustis = { version = "0.13", features = ["redis-json", "tokio-runtime"] }
axum = { version = "0.7", features = ["http2", "json", "macros",
    "original-uri", "tokio", "ws", "form", "query", "matched-path", "multipart"] }
hyper = { version = "1.3", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
http = ["rhiaqey-gateway-http"]
gtfs = ["rhiaqey-gateway-gtfs"]
websocket = ["rhiaqey-gateway-ws"]

[[bin]]
name = "websocket"
src = "src/bin/websocket.rs"
required-features = ["websocket"]

[[bin]]
name = "http"
src = "src/bin/http.rs"
required-features = ["http"]
