[package]
name = "rhiaqey-gateway-gtfs"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
protobuf = { version = "3.5", features = ["bytes"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = { version = "0.13" }
