[package]
name = "rhiaqey-gateway-http"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
rhiaqey-sdk-rs = { workspace = true }
rhiaqey-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
futures = { version = "0.3" }
prometheus = { workspace = true }
axum = { version = "0.8", features = ["http2", "json", "macros",
    "original-uri", "tokio", "ws", "form", "query", "matched-path", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
axum-client-ip = { workspace = true }
